--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
     <color name="home_action_mode_status_bar_color">#f2eaf8</color>
     <color name="home_action_mode_navigation_bar_color">#f0e9f6</color>
     <color name="bg_speed_dial_expand">#80E7E0EC</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
