--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,104 @@
 <resources>
     <!--    for speed dial-->
     <dimen name="sd_fab_side_margin">0dp</dimen>
+    <dimen name="px_1">1dp</dimen>
+    <dimen name="px_2">2dp</dimen>
+    <dimen name="px_3">3dp</dimen>
+    <dimen name="px_4">4dp</dimen>
+    <dimen name="px_5">5dp</dimen>
+    <dimen name="px_6">6dp</dimen>
+    <dimen name="px_7">7dp</dimen>
+    <dimen name="px_8">8dp</dimen>
+    <dimen name="px_9">9dp</dimen>
+    <dimen name="px_10">10dp</dimen>
+    <dimen name="px_11">11dp</dimen>
+    <dimen name="px_12">12dp</dimen>
+    <dimen name="px_13">13dp</dimen>
+    <dimen name="px_14">14dp</dimen>
+    <dimen name="px_15">15dp</dimen>
+    <dimen name="px_16">16dp</dimen>
+    <dimen name="px_17">17dp</dimen>
+    <dimen name="px_18">18dp</dimen>
+    <dimen name="px_19">19dp</dimen>
+    <dimen name="px_20">20dp</dimen>
+    <dimen name="px_21">21dp</dimen>
+    <dimen name="px_22">22dp</dimen>
+    <dimen name="px_23">23dp</dimen>
+    <dimen name="px_24">24dp</dimen>
+    <dimen name="px_25">25dp</dimen>
+    <dimen name="px_26">26dp</dimen>
+    <dimen name="px_27">27dp</dimen>
+    <dimen name="px_28">28dp</dimen>
+    <dimen name="px_29">29dp</dimen>
+    <dimen name="px_30">30dp</dimen>
+    <dimen name="px_31">31dp</dimen>
+    <dimen name="px_32">32dp</dimen>
+    <dimen name="px_33">33dp</dimen>
+    <dimen name="px_34">34dp</dimen>
+    <dimen name="px_35">35dp</dimen>
+    <dimen name="px_36">36dp</dimen>
+    <dimen name="px_37">37dp</dimen>
+    <dimen name="px_38">38dp</dimen>
+    <dimen name="px_39">39dp</dimen>
+    <dimen name="px_40">40dp</dimen>
+    <dimen name="px_41">41dp</dimen>
+    <dimen name="px_42">42dp</dimen>
+    <dimen name="px_43">43dp</dimen>
+    <dimen name="px_44">44dp</dimen>
+    <dimen name="px_45">45dp</dimen>
+    <dimen name="px_46">46dp</dimen>
+    <dimen name="px_47">47dp</dimen>
+    <dimen name="px_48">48dp</dimen>
+    <dimen name="px_49">49dp</dimen>
+    <dimen name="px_50">50dp</dimen>
+    <dimen name="px_51">51dp</dimen>
+    <dimen name="px_52">52dp</dimen>
+    <dimen name="px_53">53dp</dimen>
+    <dimen name="px_54">54dp</dimen>
+    <dimen name="px_55">55dp</dimen>
+    <dimen name="px_56">56dp</dimen>
+    <dimen name="px_57">57dp</dimen>
+    <dimen name="px_58">58dp</dimen>
+    <dimen name="px_59">59dp</dimen>
+    <dimen name="px_60">60dp</dimen>
+    <dimen name="px_61">61dp</dimen>
+    <dimen name="px_62">62dp</dimen>
+    <dimen name="px_63">63dp</dimen>
+    <dimen name="px_64">64dp</dimen>
+    <dimen name="px_65">65dp</dimen>
+    <dimen name="px_66">66dp</dimen>
+    <dimen name="px_67">67dp</dimen>
+    <dimen name="px_68">68dp</dimen>
+    <dimen name="px_69">69dp</dimen>
+    <dimen name="px_70">70dp</dimen>
+    <dimen name="px_71">71dp</dimen>
+    <dimen name="px_72">72dp</dimen>
+    <dimen name="px_73">73dp</dimen>
+    <dimen name="px_74">74dp</dimen>
+    <dimen name="px_75">75dp</dimen>
+    <dimen name="px_76">76dp</dimen>
+    <dimen name="px_77">77dp</dimen>
+    <dimen name="px_78">78dp</dimen>
+    <dimen name="px_79">79dp</dimen>
+    <dimen name="px_80">80dp</dimen>
+    <dimen name="px_81">81dp</dimen>
+    <dimen name="px_82">82dp</dimen>
+    <dimen name="px_83">83dp</dimen>
+    <dimen name="px_84">84dp</dimen>
+    <dimen name="px_85">85dp</dimen>
+    <dimen name="px_86">86dp</dimen>
+    <dimen name="px_87">87dp</dimen>
+    <dimen name="px_88">88dp</dimen>
+    <dimen name="px_89">89dp</dimen>
+    <dimen name="px_90">90dp</dimen>
+    <dimen name="px_91">91dp</dimen>
+    <dimen name="px_92">92dp</dimen>
+    <dimen name="px_93">93dp</dimen>
+    <dimen name="px_94">94dp</dimen>
+    <dimen name="px_95">95dp</dimen>
+    <dimen name="px_96">96dp</dimen>
+    <dimen name="px_97">97dp</dimen>
+    <dimen name="px_98">98dp</dimen>
+    <dimen name="px_99">99dp</dimen>
+    <dimen name="px_100">100dp</dimen>
 </resources>
