--- a/app/src/main/res/drawable/ripple_home_settings.xml
+++ b/app/src/main/res/drawable/ripple_home_settings.xml
@@ -3,7 +3,7 @@
     android:color="@color/surface_on">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/px_20" />
+            <corners android:radius="@dimen/dp_20" />
             <solid android:color="@color/surface_on" />
         </shape>
     </item>
