--- a/app/src/main/res/layout/activity_input_manual.xml
+++ b/app/src/main/res/layout/activity_input_manual.xml
@@ -12,16 +12,16 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/px_15"
-        android:paddingTop="@dimen/px_8"
+        android:paddingHorizontal="@dimen/dp_15"
+        android:paddingTop="@dimen/dp_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="@dimen/px_40"
-            android:layout_height="@dimen/px_40"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/icon_back" />
 
@@ -35,19 +35,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
-            android:paddingHorizontal="@dimen/px_16"
-            android:paddingVertical="@dimen/px_8"
+            android:paddingHorizontal="@dimen/dp_16"
+            android:paddingVertical="@dimen/dp_8"
             android:text="@string/text_settings_sync_save"
             android:textColor="#333333"
-            android:textSize="@dimen/px_16" />
+            android:textSize="@dimen/dp_16" />
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/secret_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/px_12"
-        android:layout_marginTop="@dimen/px_24"
+        android:layout_marginHorizontal="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_24"
         android:hint="@string/hint_totp_secret_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
         android:id="@+id/name_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_25"
+        android:layout_marginTop="@dimen/dp_25"
         android:hint="@string/hint_totp_name_input"
         app:layout_constraintEnd_toEndOf="@+id/secret_input"
         app:layout_constraintHorizontal_bias="0"
@@ -83,7 +83,7 @@
         android:id="@+id/account_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_25"
+        android:layout_marginTop="@dimen/dp_25"
         android:hint="@string/hint_totp_account_input"
         app:layout_constraintEnd_toEndOf="@+id/name_input"
         app:layout_constraintHorizontal_bias="0"
@@ -101,7 +101,7 @@
         android:id="@+id/digits_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_25"
+        android:layout_marginTop="@dimen/dp_25"
         android:hint="@string/hint_totp_digits_input"
         app:layout_constraintEnd_toEndOf="@+id/account_input"
         app:layout_constraintHorizontal_bias="0"
@@ -119,7 +119,7 @@
         android:id="@+id/period_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_25"
+        android:layout_marginTop="@dimen/dp_25"
         android:hint="@string/hint_totp_period_input"
         app:layout_constraintEnd_toEndOf="@+id/digits_input"
         app:layout_constraintHorizontal_bias="0"
