--- a/app/src/main/res/layout/activity_sync_settings.xml
+++ b/app/src/main/res/layout/activity_sync_settings.xml
@@ -12,16 +12,16 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/px_15"
-        android:paddingTop="@dimen/px_8"
+        android:paddingHorizontal="@dimen/dp_15"
+        android:paddingTop="@dimen/dp_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="@dimen/px_40"
-            android:layout_height="@dimen/px_40"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/icon_back" />
 
@@ -35,21 +35,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
-        android:paddingHorizontal="@dimen/px_16"
-        android:paddingVertical="@dimen/px_8"
+        android:paddingHorizontal="@dimen/dp_16"
+        android:paddingVertical="@dimen/dp_8"
         android:text="@string/text_settings_sync_save"
         android:textColor="#333333"
-        android:textSize="@dimen/px_16" />
+        android:textSize="@dimen/dp_16" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/sync_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/px_15"
-        android:paddingStart="@dimen/px_16"
+        android:layout_marginHorizontal="@dimen/dp_15"
+        android:paddingStart="@dimen/dp_16"
         android:text="@string/label_settings_sync_method"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="@+id/sync_menu_text_layout"
         app:layout_constraintEnd_toStartOf="@+id/sync_menu_text_layout"
         app:layout_constraintHorizontal_bias="0"
@@ -62,9 +62,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/px_30"
-        android:layout_marginTop="@dimen/px_10"
-        android:layout_marginEnd="@dimen/px_15"
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sync_text_view"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -81,7 +81,7 @@
         android:id="@+id/server_url_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:hint="@string/hint_server_url"
         app:layout_constraintEnd_toEndOf="@+id/sync_menu_text_layout"
         app:layout_constraintStart_toStartOf="@+id/sync_text_view"
@@ -98,7 +98,7 @@
         android:id="@+id/account_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:hint="@string/hint_server_account"
         app:layout_constraintEnd_toEndOf="@+id/server_url_layout"
         app:layout_constraintStart_toStartOf="@+id/server_url_layout"
@@ -115,7 +115,7 @@
         android:id="@+id/password_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:hint="@string/hint_server_password"
         app:layout_constraintEnd_toEndOf="@+id/account_input"
         app:layout_constraintStart_toStartOf="@+id/account_input"
@@ -131,7 +131,7 @@
         android:id="@+id/sync_none_notice_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_16"
+        android:layout_marginTop="@dimen/dp_16"
         android:text="@string/label_settings_sync_none_notice"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/sync_menu_text_layout"
