--- a/app/src/main/res/layout/dialog_main_settings.xml
+++ b/app/src/main/res/layout/dialog_main_settings.xml
@@ -4,10 +4,10 @@
     android:id="@+id/settings_dialog_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/px_15"
+    android:layout_marginHorizontal="@dimen/dp_15"
     android:background="@color/md_theme_surface"
     android:fitsSystemWindows="true"
-    android:paddingVertical="@dimen/px_12">
+    android:paddingVertical="@dimen/dp_12">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,10 +22,10 @@
             android:gravity="center_vertical"
             android:lines="1"
             android:maxLines="1"
-            android:paddingVertical="@dimen/px_8"
+            android:paddingVertical="@dimen/dp_8"
             android:text="@string/label_settings_sync"
             android:textColor="#666666"
-            android:textSize="@dimen/px_16"
+            android:textSize="@dimen/dp_16"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,10 +39,10 @@
             android:gravity="center_vertical"
             android:lines="1"
             android:maxLines="1"
-            android:paddingVertical="@dimen/px_8"
+            android:paddingVertical="@dimen/dp_8"
             android:text="@string/label_settings_about"
             android:textColor="#666666"
-            android:textSize="@dimen/px_16"
+            android:textSize="@dimen/dp_16"
             app:layout_constraintEnd_toEndOf="@+id/settings_sync_text"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/settings_sync_text"
@@ -56,10 +56,10 @@
             android:gravity="center_vertical"
             android:lines="1"
             android:maxLines="1"
-            android:paddingVertical="@dimen/px_8"
+            android:paddingVertical="@dimen/dp_8"
             android:text="@string/label_settings_license"
             android:textColor="#666666"
-            android:textSize="@dimen/px_16"
+            android:textSize="@dimen/dp_16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/settings_about_text"
             app:layout_constraintHorizontal_bias="0"
