--- a/app/src/main/res/layout/header_activity_toolbar.xml
+++ b/app/src/main/res/layout/header_activity_toolbar.xml
@@ -6,16 +6,16 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingHorizontal="@dimen/px_15"
-    android:paddingTop="@dimen/px_8"
+    android:paddingHorizontal="@dimen/dp_15"
+    android:paddingTop="@dimen/dp_8"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
     <ImageButton
         android:id="@+id/back_button"
-        android:layout_width="@dimen/px_40"
-        android:layout_height="@dimen/px_40"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:background="?android:attr/selectableItemBackground"
         android:src="@drawable/icon_back" />
 
@@ -29,9 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
-        android:paddingHorizontal="@dimen/px_16"
-        android:paddingVertical="@dimen/px_8"
+        android:paddingHorizontal="@dimen/dp_16"
+        android:paddingVertical="@dimen/dp_8"
         android:text="@string/text_settings_sync_save"
         android:textColor="#333333"
-        android:textSize="@dimen/px_16" />
+        android:textSize="@dimen/dp_16" />
 </LinearLayout>
