--- a/app/src/main/res/layout/item_settings_title.xml
+++ b/app/src/main/res/layout/item_settings_title.xml
@@ -3,7 +3,7 @@
     android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="@dimen/px_30"
-    android:paddingTop="@dimen/px_12"
-    android:paddingBottom="@dimen/px_4"
-    android:textSize="13sp" />
+    android:paddingHorizontal="@dimen/dp_30"
+    android:paddingTop="@dimen/dp_12"
+    android:paddingBottom="@dimen/dp_4"
+    android:textSize="@dimen/sp_13" />
