--- a/app/src/main/res/layout/item_setttings_content.xml
+++ b/app/src/main/res/layout/item_setttings_content.xml
@@ -4,21 +4,21 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:paddingHorizontal="@dimen/px_30"
-    android:paddingVertical="@dimen/px_12">
+    android:paddingHorizontal="@dimen/dp_30"
+    android:paddingVertical="@dimen/dp_12">
 
     <TextView
         android:id="@+id/sync_setting_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#333333"
-        android:textSize="15sp" />
+        android:textSize="@dimen/sp_15" />
 
     <TextView
         android:id="@+id/sync_setting_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_2"
+        android:layout_marginTop="@dimen/dp_2"
         android:textColor="#5E5E5E"
-        android:textSize="@dimen/px_13" />
+        android:textSize="@dimen/dp_13" />
 </LinearLayout>
