--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/px_12"
-    android:layout_marginVertical="@dimen/px_4"
+    android:layout_marginHorizontal="@dimen/dp_12"
+    android:layout_marginVertical="@dimen/dp_4"
     android:background="@null">
 
     <View
@@ -21,11 +21,11 @@
         android:id="@+id/totp_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/px_15"
-        android:layout_marginTop="@dimen/px_8"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_8"
         android:includeFontPadding="false"
         android:textColor="#333333"
-        android:textSize="@dimen/px_20"
+        android:textSize="@dimen/dp_20"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Google" />
@@ -34,10 +34,10 @@
         android:id="@+id/totp_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_5"
+        android:layout_marginTop="@dimen/dp_5"
         android:includeFontPadding="false"
         android:textColor="#333333"
-        android:textSize="@dimen/px_20"
+        android:textSize="@dimen/dp_20"
         app:layout_constraintStart_toStartOf="@+id/totp_name"
         app:layout_constraintTop_toBottomOf="@+id/totp_name"
         tools:text="gotcha1874@gmail.com" />
@@ -46,11 +46,11 @@
         android:id="@+id/totp_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/px_8"
-        android:layout_marginBottom="@dimen/px_6"
+        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginBottom="@dimen/dp_6"
         android:includeFontPadding="false"
         android:textColor="#333333"
-        android:textSize="@dimen/px_30"
+        android:textSize="@dimen/dp_30"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/totp_account"
@@ -59,9 +59,9 @@
 
     <org.getbuddies.a2step.ui.home.view.ProgressBar
         android:id="@+id/totp_progress_bar"
-        android:layout_width="@dimen/px_45"
-        android:layout_height="@dimen/px_45"
-        android:layout_marginEnd="@dimen/px_30"
+        android:layout_width="@dimen/dp_45"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginEnd="@dimen/dp_30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
